Adjusted styles especially on clickable elements. Prevented hover on mobile. Activated nav buttons in header to scroll using ID

--- a/src/components/css/experience.module.css
+++ b/src/components/css/experience.module.css
@@ -1,8 +1,14 @@
-.container:hover > .content {
-  opacity: 0.7;
-}
+@media (hover: hover) and (pointer: fine) {
+  .container:hover > .content {
+    opacity: 0.7;
+  }
 
-.content:hover {
-  @apply bg-neutral-800;
-  opacity: 1 !important;
+  .content:hover {
+    @apply bg-neutral-800;
+    opacity: 1 !important;
+  }
+
+  .content {
+    @apply transition-all duration-100;
+  }
 }
